[gd_scene load_steps=5 format=3 uid="uid://b8p1wcarwvesm"]

[ext_resource type="Script" uid="uid://banlf8hadnaxy" path="res://mobile_controls.gd" id="1_3kddr"]
[ext_resource type="Texture2D" uid="uid://w4hhrc5nn66g" path="res://assets/mobile/movement_button.png" id="2_u4eo6"]
[ext_resource type="Texture2D" uid="uid://b3nau8fw65ueo" path="res://assets/mobile/sprint_button.png" id="3_fie5s"]
[ext_resource type="Texture2D" uid="uid://c8h05xtwvb5y4" path="res://assets/mobile/pause_button.png" id="4_ndx0v"]

[node name="mobile_controls" type="Node2D"]
process_mode = 3
z_index = 300
position = Vector2(640, 360)
script = ExtResource("1_3kddr")

[node name="forward" type="TouchScreenButton" parent="."]
position = Vector2(-472, -48)
scale = Vector2(1.875, 2)
texture_normal = ExtResource("2_u4eo6")

[node name="right" type="TouchScreenButton" parent="."]
position = Vector2(-224, 80)
rotation = 1.5708
scale = Vector2(1.875, 2)
texture_normal = ExtResource("2_u4eo6")

[node name="left" type="TouchScreenButton" parent="."]
position = Vector2(-600, 200)
rotation = -1.5708
scale = Vector2(1.875, 2)
texture_normal = ExtResource("2_u4eo6")

[node name="down" type="TouchScreenButton" parent="."]
position = Vector2(-352, 328)
rotation = 3.14159
scale = Vector2(1.875, 2)
texture_normal = ExtResource("2_u4eo6")

[node name="sprint" type="TouchScreenButton" parent="."]
position = Vector2(480, 80)
scale = Vector2(1.875, 1.875)
texture_normal = ExtResource("3_fie5s")

[node name="pause" type="TouchScreenButton" parent="."]
position = Vector2(536, -336)
texture_normal = ExtResource("4_ndx0v")

[connection signal="pressed" from="forward" to="." method="_on_forward_pressed"]
[connection signal="released" from="forward" to="." method="_on_forward_released"]
[connection signal="pressed" from="right" to="." method="_on_right_pressed"]
[connection signal="released" from="right" to="." method="_on_right_released"]
[connection signal="pressed" from="left" to="." method="_on_left_pressed"]
[connection signal="released" from="left" to="." method="_on_left_released"]
[connection signal="pressed" from="down" to="." method="_on_down_pressed"]
[connection signal="released" from="down" to="." method="_on_down_released"]
[connection signal="pressed" from="sprint" to="." method="_on_sprint_pressed"]
[connection signal="released" from="sprint" to="." method="_on_sprint_released"]
[connection signal="pressed" from="pause" to="." method="_on_pause_pressed"]
